# ENSC351-project

./: .gitignore  buildCommand.txt  buildTarget.sh  readme.MD
DoorMod/app/: CMakeLists.txt  doorMod.c
DoorMod/hal/include/hal/: GPIO.h  HC-SR04.h
DoorMod/hal/src/: GPIO.c  HC-SR04.c
app/: CMakeLists.txt  door_system.c  move_motor.c  system.c
app/include/: discord_alert.h  http_api.h
app/src/: discord_alert.c  doorMod.c  doorMod_cli.c  door_system.c  door_udp_handler.c  http_api.c  led_test.c
gui/: UI.html  doorAdapter.js  main.html  main.js  server.js  style.css  web_control.js
gui/lib/: door_server.js
hal/: CMakeLists.txt
hal/include/hal/: DiscordAlert.h  StepperMotor.h  door_udp_client.h  hub_udp.h  led.h
hal/ref/include/hal/: UDP.h  terminal_output.h
hal/ref/src/: UDP.c  terminal_output.c
hal/src/: DiscordAlert.c  HC-SR04.c  PWM.c  StepperMotor.c  doorMod.c  door_tcp_client.c  door_udp.c  door_udp_client.c  hub_udp.c  led.c  led_worker.c  system_webhook.c
work/CentralMod/app/: CMakeLists.txt
work/DoorMod/app/: CMakeLists.txt  doorMod.c
work/DoorMod/hal/include/hal/: GPIO.h  HC-SR04.h  StepperMotor.h
work/DoorMod/hal/src/: GPIO.c
